# sakai-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  check_announcements.py  debug_announcements.py  debug_portal.py  gateway_page.html  login_page.html  login_response.html  portal_debug.html  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml
scripts/: create_table.py  debug_login.py  debug_portal.py  list_courses.py
src/sakai_bot/: __init__.py  config.py  main.py  models.py
src/sakai_bot/auth/: __init__.py  sakai_session.py
src/sakai_bot/db/: __init__.py  client.py  notification_store.py
src/sakai_bot/notify/: __init__.py  digest.py  formatters.py  reminders.py  telegram.py  whatsapp.py
src/sakai_bot/scrapers/: __init__.py  announcements.py  announcements.py.bak  assignments.py  assignments.py.bak  base.py  courses.py  courses.py.bak  exams.py  exams.py.bak  resources.py  term.py
tests/: conftest.py  test_courses.py  test_digest.py  test_main.py  test_models.py  test_reminders.py  test_resources.py  test_term.py
